array simulate stack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(BinaryPartition basic/binary_partition.cpp)
 target_include_directories(BinaryPartition PUBLIC utils)
 add_executable(TwoPointer basic/two_pointer.cpp)
 add_executable(MergeIntervals basic/merge_intervals.cpp)
+add_executable(StaticStackArray basic/static_stack_array.cpp)
