adjust document's structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,11 @@ project(Algorithm_Exercises)
 set(CMAKE_CXX_STANDARD 14)
 
 add_subdirectory(basic)
+add_subdirectory(data_structure)
+add_subdirectory(computational_geometry)
+add_subdirectory(dynamic_program)
+add_subdirectory(mathematics)
+add_subdirectory(search)
+add_subdirectory(string)
+add_subdirectory(others)
+add_subdirectory(tree_graph)
